--- a/style.css
+++ b/style.css
@@ -6,6 +6,18 @@ body {
   padding: 20px;
 }
 
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.cenario{
+  background-image: url('https://img.freepik.com/vetores-gratis/padrao-de-grama-verde-sem-costura_1284-52275.jpg?size=338&ext=jpg&ga=GA1.1.1700460183.1708473600&semt=ais'); /* URL da sua imagem */
+  background-position: center; /* Para centralizar a imagem */
+}
+
+
 h1 {
   color: #333;
 }
@@ -13,7 +25,6 @@ h1 {
 canvas {
   border: 1px solid #333;
   display: block;
-  margin: 20px auto;
 }
 
 button {
@@ -24,10 +35,14 @@ button {
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  margin: 10px;
 }
+
 button:hover {
   background-color: #45a049;
 }
+
 button:active {
   background-color: #3d8b3d;
 }
+
